# ghostreplay

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  GHOSTREPLAY.md  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: verify.yml
cmake/: PackagePortable.cmake
config/: ghostreplay.example.json
docs/: README_EARLY_ACCESS.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  THIRD_PARTY_NOTICES.md
resources/: qml.qrc  resources.qrc
resources/icons/options/: preview.html  raster-preview.html
resources/qml/: AppButton.qml  AppChip.qml  AppLogo.qml  AppScrollBar.qml  AppThumbnail.qml  AppToggle.qml  ClipEditorPage.qml  ClipsPage.qml  DashboardPage.qml  GlassPanel.qml  MainWindow.qml  MonoIcon.qml  ReplayBufferStrip.qml  SettingsPage.qml  Theme.qml
resources/themes/: dark.qss  light.qss
resources/windows/: ghostreplay.exe.manifest  ghostreplay.rc
src/: main.cpp
src/audio/: AudioCapture.cpp  AudioCapture.h  AudioEncoder.cpp  AudioEncoder.h
src/buffer/: KeyframeIndex.cpp  KeyframeIndex.h  RingBuffer.cpp  RingBuffer.h
src/capture/: CaptureManager.cpp  CaptureManager.h  CaptureTarget.h  DXGICapture.cpp  DXGICapture.h  ICapture.h  WGCCapture.cpp  WGCCapture.h
src/encode/: EncoderConfig.h  EncoderSelector.cpp  EncoderSelector.h  FFmpegVideoEncoder.cpp  FFmpegVideoEncoder.h  IEncoder.h
src/export/: ClipExporter.cpp  ClipExporter.h  TranscodeJob.cpp  TranscodeJob.h
src/game/: GameDetector.cpp  GameDetector.h
src/hotkey/: HotkeyManager.cpp  HotkeyManager.h
src/ui/: Backend.cpp  Backend.h  ClipPreviewController.cpp  ClipPreviewController.h  DisplayTopologyMonitor.cpp  DisplayTopologyMonitor.h  GRApplication.cpp  GRApplication.h  MainWindow.cpp  MainWindow.h  MpvPreviewController.cpp  MpvPreviewController.h  SettingsWindow.cpp  SettingsWindow.h  ThumbnailProvider.cpp  ThumbnailProvider.h  WindowChromeController.cpp  WindowChromeController.h
src/util/: ClipProbe.cpp  ClipProbe.h  Config.cpp  Config.h  FileActions.cpp  FileActions.h  Logger.cpp  Logger.h  ReleaseHealth.cpp  ReleaseHealth.h  Thumbnail.cpp  Thumbnail.h
tests/: test_capture_sources.cpp  test_config.cpp  test_display_topology.cpp  test_encoder_selector.cpp  test_file_actions.cpp  test_release_assets.cpp  test_release_health.cpp
